src/test/deca/syntax/invalid/provided/symbole1.deca
/*/ Description:
//    Programme utilisant un autre symbole.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe : 
//
// Historique:
//    cree le 01/01/2022*/

{
        println("Hello").;
}
